kubernetes/a-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bosch-service-a
  name: bosch-service-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bosch-service-a
  template:
    metadata:
      labels:
        app: bosch-service-a
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: bosch-service-a
          image: quay.io/nlembers/bosch-service-a:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bosch-service-a
  name: bosch-service-a
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: bosch-service-a
